# xrun

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  ISSUES.md  LICENSE  README.md  install.ps1  install.sh  issue.md  run_plans.sh
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
checkpoints/: best_e0.json  best_e1.json  best_e2.json
claude/: skill.md
crates/xrun-cli/: Cargo.toml
crates/xrun-cli/src/: cli.rs  lib.rs  main.rs
crates/xrun-cli/src/commands/: balance.rs  config_cmd.rs  confirm.rs  cp.rs  dataset.rs  diff.rs  doctor.rs  events_cmd.rs  fix_status.rs  gc.rs  init.rs  init_manifest.rs  install.rs  launch.rs  logs.rs  ls.rs  metrics_cmd.rs  mod.rs  patch.rs  poll_daemon.rs  probe.rs  pull.rs  rerun.rs  resume.rs  shell.rs  show.rs  stop.rs  sweep.rs  update.rs
crates/xrun-cli/tests/: cli_commands.rs  cli_smoke.rs  launch_e2e.rs
crates/xrun-cli/tests/data/: vast_minimal.yaml
crates/xrun-core/: Cargo.toml
crates/xrun-core/src/: budget.rs  error.rs  lib.rs  metric_sink.rs  paths.rs  updates.rs  vendor.rs
crates/xrun-core/src/config/: credentials.rs  global.rs  mod.rs
crates/xrun-core/src/events/: jsonl.rs  mod.rs  types.rs
crates/xrun-core/src/manifest/: hash.rs  mod.rs  types.rs  validate.rs
crates/xrun-core/src/metrics/: mod.rs  types.rs
crates/xrun-core/src/store/: artifacts.rs  events.rs  instances.rs  metrics.rs  mod.rs  poll_offsets.rs  runs.rs
crates/xrun-core/src/store/migrations/: 001_initial.sql  002_cost_estimate.sql  003_budget.sql  004_poller_pid.sql  005_sink_run_ids.sql  006_backfill_ended_at.sql
crates/xrun-core/tests/: config_roundtrip.rs  jsonl_streaming.rs  manifest_parse.rs  store_lifecycle.rs
crates/xrun-core/tests/data/: kaggle_minimal.yaml  vast_full.yaml
crates/xrun-kaggle/: Cargo.toml  build.rs
crates/xrun-kaggle/src/: adapter.rs  cli.rs  embed.rs  error.rs  http.rs  ingest.rs  kernel_metadata.rs  lib.rs  log_stream.rs  notebook_inject.rs  snapshot.rs
crates/xrun-kaggle/tests/: cli_parse.rs  tail_e2e.rs
crates/xrun-kaggle/tests/data/: _xrun_kaggle_entry.py  kernels_output_meta.json  kernels_status.json
crates/xrun-kaggle/tests/data/kernel_output_run/: events.jsonl  metrics.jsonl
crates/xrun-local/: Cargo.toml
crates/xrun-mlflow/: Cargo.toml
crates/xrun-mlflow/src/: client.rs  error.rs  lib.rs  sink.rs  types.rs
crates/xrun-mlflow/tests/: client.rs
crates/xrun-poller/: Cargo.toml
crates/xrun-poller/src/: lib.rs  lock.rs  loop_runner.rs  metric_fanout.rs  mlflow_mirror.rs  parser.rs
crates/xrun-poller/tests/: loop_progress.rs  metric_fanout.rs  mlflow_mirror.rs
crates/xrun-ssh/: Cargo.toml
crates/xrun-ssh/src/: adapter.rs  cmd.rs  error.rs  lib.rs  ssh.rs
crates/xrun-tui/: Cargo.toml
crates/xrun-tui/src/: app.rs  event.rs  lib.rs  state.rs  theme.rs
crates/xrun-tui/src/app/: actions.rs  keys.rs  loaders.rs  mod.rs  vendor.rs
crates/xrun-tui/src/screens/: instances.rs  launch.rs  mod.rs  palette.rs  run_detail.rs  runs.rs  settings.rs  vendors.rs
crates/xrun-tui/src/services/: live.rs  mod.rs  vendor_probe.rs
crates/xrun-tui/src/view/: anim.rs  cards.rs  empty.rs  help.rs  instances.rs  launch.rs  mod.rs  palette.rs  run_detail.rs  runs.rs  settings.rs  splash.rs  status_bar.rs  vendor_edit.rs  vendors.rs
crates/xrun-tui/src/view/tabs/: logs.rs  manifest.rs  mod.rs  stages.rs
crates/xrun-tui/tests/: launch_screen.rs  live_update.rs  palette.rs  render_smoke.rs  run_detail_tabs.rs  runs_screen.rs
crates/xrun-tui/tests/snapshots/: empty.txt  launch_picker.txt  logs_50_lines.txt  runs_screen.txt  stages_three_stages.txt
crates/xrun-vast/: Cargo.toml
crates/xrun-vast/src/: adapter.rs  cli.rs  error.rs  execute.rs  lib.rs  mock.rs  process.rs  provision.rs  pull.rs  rest.rs  stub.rs  tail.rs  transfer.rs  types.rs  upload.rs
crates/xrun-vast/tests/: cli_parse.rs  provision_logic.rs  rest_contract.rs  rest_live.rs  rest_smoke.rs  stub_smoke.rs  tail_offset.rs  upload_modes.rs  vendor_status_live.rs
crates/xrun-vast/tests/data/: vastai_search_offers.json  vastai_show_instance.json  vastai_show_user.json
crates/xrun-wandb/: Cargo.toml
crates/xrun-wandb/src/: client.rs  error.rs  lib.rs  sink.rs  types.rs
crates/xrun-wandb/tests/: sink.rs
docs/: ARCHITECTURE.md  CLI.md  EVENTS.md  MANIFEST.md  ROADMAP.md  SKILL.md  STATE.md  TUI.md
docs/plans/: 2026-04-27-xrun-v0.1-bis-vast-poller-hook.md  2026-04-27-xrun-v0.1-foundation.md  2026-04-27-xrun-v0.2-tui.md  2026-04-27-xrun-v0.3-mlflow-kaggle.md  2026-04-28-xrun-v0.2.1-vendors-screen.md  2026-04-30-xrun-v0.4-publication-readiness.md
exp/: kaggle_classification.yaml  kaggle_livelog_smoke.yaml  local_sleep.yaml  local_smoke.py  local_smoke.yaml
exp/templates/: README.md  classification.yaml  classification_train.py  kaggle_classification.yaml  kaggle_smoke.yaml  quickstart.yaml  quickstart_train.py  regression.yaml  regression_train.py
exp/tests/: README.md  local_artifacts.py  local_artifacts.yaml  local_classification_eval.py  local_fail.py  (+9 more)
python/xrun_hook/: README.md  pyproject.toml
python/xrun_hook/src/xrun_hook/: __init__.py  _log_streamer.py  _paths.py  _writer.py
python/xrun_hook/tests/: test_api.py  test_ddp_safety.py  test_log_streamer.py
python/xrun_tui/: pyproject.toml  test_header_click.py
python/xrun_tui/src/xrun_tui/: __main__.py  app.py  app.tcss  cli.py  config.py  db.py  services.py  utils.py
python/xrun_tui/src/xrun_tui/screens/: artifacts.py  budget.py  compare.py  confirm.py  country_exclude.py  dashboard.py  doctor.py  error_detail.py  help.py  image_view.py  instances.py  launch.py  notifications.py  palette.py  patch_launch.py  run_detail.py  runs.py  settings.py  sinks.py  splash.py  sweep.py  vendors.py  watch.py  wizard.py
python/xrun_tui/src/xrun_tui/screens/wizard/: __init__.py  catalog.py  modals.py  screen.py  steps.py
python/xrun_tui/src/xrun_tui/themes/: __init__.py  tokyo_night.tcss
python/xrun_tui/src/xrun_tui/widgets/: ascii_chart.py  fuzzy_filter.py  jump_overlay.py  metrics_palette.py  metrics_view.py  report_view.py  status_bar.py  title_bar.py
(+13 files in other folders)
