[workspace]
members = [
    "crates/xrun-core",
    "crates/xrun-vast",
    "crates/xrun-poller",
    "crates/xrun-cli",
    "crates/xrun-tui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"

# Storage
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
ulid = { version = "1", features = ["serde"] }

# Paths / directories
directories = "5"

# Error handling
thiserror = "1"
anyhow = "1"

# Hashing
sha2 = "0.10"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "process", "sync", "time", "macros", "fs"] }

# HTTP client (vendor REST)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Process utilities
which = "6"
humantime = "2"

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dev / test
assert_cmd = "2"
predicates = "3"
tempfile = "3"
pretty_assertions = "1"
