[package]
name = "xrun-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "xrun"
path = "src/main.rs"

[dependencies]
xrun-core = { path = "../xrun-core" }
xrun-vast = { path = "../xrun-vast" }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
