[package]
name = "xrun-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "xrun"
path = "src/main.rs"

[dependencies]
xrun-core = { path = "../xrun-core" }
xrun-vast = { path = "../xrun-vast" }
xrun-poller = { path = "../xrun-poller" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
