[package]
name = "xrun-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "xrun"
path = "src/main.rs"

[lib]
name = "xrun_cli"
path = "src/lib.rs"

[features]
default = ["tui"]
tui = ["dep:xrun-tui"]

[dependencies]
xrun-core = { path = "../xrun-core" }
xrun-vast = { path = "../xrun-vast" }
xrun-kaggle = { path = "../xrun-kaggle" }
xrun-local = { path = "../xrun-local" }
xrun-ssh = { path = "../xrun-ssh" }
xrun-mlflow = { path = "../xrun-mlflow" }
xrun-wandb = { path = "../xrun-wandb" }
xrun-poller = { path = "../xrun-poller" }
plotters = { workspace = true }
xrun-tui = { path = "../xrun-tui", optional = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
xrun-vast = { path = "../xrun-vast", features = ["mock"] }
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
