[package]
name = "xrun-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rusqlite = { workspace = true }
ulid = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
