[package]
name = "xrun-kaggle"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
mock = []

[dependencies]
xrun-core = { path = "../xrun-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }

[dev-dependencies]
xrun-core = { path = "../xrun-core" }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt"] }
