[package]
name = "xrun-poller"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
xrun-core = { path = "../xrun-core" }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
chrono = { workspace = true }
