[package]
name = "xrun-poller"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
xrun-core = { path = "../xrun-core" }
xrun-mlflow = { path = "../xrun-mlflow" }
chrono = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
chrono = { workspace = true }
wiremock = "0.6"
tokio = { workspace = true, features = ["test-util"] }
