[package]
name = "xrun-tui"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
xrun-core = { path = "../xrun-core" }

ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { workspace = true }
tokio-util = "0.7"
futures = "0.3"

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
