[package]
name = "xrun-tui"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
xrun-core = { path = "../xrun-core" }
xrun-vast = { path = "../xrun-vast" }

ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { workspace = true }
tokio-util = "0.7"
futures = "0.3"

chrono = { workspace = true }
throbber-widgets-tui = "0.7"

serde_json = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
