[package]
name = "xrun-vast"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
xrun-core = { path = "../xrun-core" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
xrun-core = { path = "../xrun-core" }
pretty_assertions = { workspace = true }
