[package]
name = "xrun-vast"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
xrun-core = { path = "../xrun-core" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
which = { workspace = true }

[dev-dependencies]
xrun-core = { path = "../xrun-core" }
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
