[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xrun_hook"
version = "0.5.4"
description = "Training hook for xrun — emits structured events and metrics"
license = { text = "MIT" }
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-xdist"]

[tool.hatch.build.targets.wheel]
packages = ["src/xrun_hook"]
