[project]
name = "xrun-tui"
version = "0.7.0"
description = "Textual TUI for xrun"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.70.0",
    "aiosqlite>=0.20.0",
    "rich-pixels>=3.0.0",
    "pillow>=10.0",
]

[project.scripts]
xrun-tui = "xrun_tui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xrun_tui"]
